# backend/src/main/openapi/documentation.yaml
@@ -16,20 +16,392 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/Map_String"
+
   /products:
-  # Get Product(s)
-  # Add Product
+    # Get Product(s)
+    get:
+      description: "Route to get product(s)"
+      parameters:
+        - name: "id"
+          in: "query"
+          description: "ID of the product to retrieve"
+          required: false
+          schema:
+            type: "string"
+        - name: "status"
+          in: "query"
+          description: "Status of the product(s) to retrieve"
+          required: false
+          schema:
+            type: "string"
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Product"
+        "404":
+          description: "Not Found"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Product not found."
+        "500":
+          description: "Internal Server Error"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Failed to retrieve product(s)"
+
+    # Add Product
+    post:
+      description: "Route to add a product"
+      requestBody:
+        content:
+          '*/*':
+            schema:
+              $ref: "#/components/schemas/Product"
+        required: true
+      responses:
+        "201":
+          description: "Created"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Product added successfully."
+        "500":
+          description: "Internal Server Error"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Failed to add product"
+          "400":
+            description: "Bad Request"
+            content:
+              '*/*':
+                schema:
+                  type: "string"
+                examples:
+                  Example#1:
+                    value: "Invalid productdata format"
+
+
   # Edit Product
+  /products/{id}:
+    put:
+      description: "Route to edit a product"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ID of the product to edit"
+          required: true
+          schema:
+            type: "string"
+      requestBody:
+        content:
+          '*/*':
+            schema:
+              $ref: "#/components/schemas/Product"
+        required: true
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Product Updated successfully."
+        "400":
+          description: "Bad Request"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Invalid productdata data format"
+        "404":
+          description: "Not Found"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Product not found."
+
+
   /transactions:
-  # Get Transactions
-  # Add Transaction
+    # Get Transactions
+    get:
+  description: "Route to get all transactions"
+  parameters:
+    - name: "type"
+      in: "query"
+      required: false
+      schema:
+        type: "string"
+  responses:
+    "400":
+      description: "Bad Request"
+      content:
+        '*/*':
+          schema:
+            type: "string"
+          examples:
+            Example#1:
+              value: "Missing Type"
+    "200":
+      description: "OK"
+      content:
+        '*/*':
+          schema:
+            type: "string"
+    "500":
+      description: "Internal Server Error"
+      content:
+        '*/*':
+          schema:
+            type: "string"
+          examples:
+            Example#1:
+              value: ""
+    # Add Transaction
+    post:
+  description: "Route to add a transaction"
+  requestBody:
+    content:
+      '*/*':
+        schema:
+          $ref: "#/components/schemas/Transaction"
+    required: true
+  responses:
+    "201":
+      description: "Created"
+      content:
+        '*/*':
+          schema:
+            type: "string"
+          examples:
+            Example#1:
+              value: "Transaction added successfully."
+    "500":
+      description: "Internal Server Error"
+      content:
+        '*/*':
+          schema:
+            type: "string"
+          examples:
+            Example#1:
+              value: "Failed to add transaction."
+    "400":
+      description: "Bad Request"
+      content:
+        '*/*':
+          schema:
+            type: "string"
+          examples:
+            Example#1:
+              value: "Invalid data format."
+
   /ledger:
-  # Get Ledger Items
+    # Get Ledger Items
+    get:
+  description: "Route to get ledger items"
+  parameters:
+    - name: "partnerId"
+      in: "query"
+      required: true
+      schema:
+        type: "string"
+    - name: "startDate"
+      in: "query"
+      required: true
+      schema:
+        type: "string"
+    - name: "endDate"
+      in: "query"
+      required: true
+      schema:
+        type: "string"
+  responses:
+    "400":
+      description: "Bad Request"
+      content:
+        '*/*':
+          schema:
+            type: "string"
+          examples:
+            Example#1:
+              value: "Missing End Date"
+            Example#2:
+              value: "Missing Start Date"
+            Example#3:
+              value: "Missing Partner ID"
+    "200":
+      description: "OK"
+      content:
+        '*/*':
+          schema:
+            type: "string"
+    "500":
+      description: "Internal Server Error"
+      content:
+        '*/*':
+          schema:
+            type: "string"
+          examples:
+            Example#1:
+              value: "Failed to retrieve invoices."
+
   /invoices:
-  # Get Invoices
-  # Add Invoice
+    # Get Invoices
+    get:
+      description: "Route to get invoice(s)"
+      parameters:
+        - name: "id"
+          in: "query"
+          description: "ID of the invoice to retrieve"
+          required: false
+          schema:
+            type: "string"
+        - name: "type"
+          in: "query"
+          description: "Type of the invoice(s) to retrieve"
+          required: false
+          schema:
+            type: "string"
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+        "404":
+          description: "Not Found"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Invoice not found."
+                Example#2:
+                  value: "Partner not found."
+        "500":
+          description: "Internal Server Error"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Failed to retrieve invoice(s)"
+
+    # Add Invoice
+    post:
+      description: "Route to add an invoice"
+      requestBody:
+        content:
+          '*/*':
+            schema:
+              $ref: "#/components/schemas/Invoice"
+        required: true
+      responses:
+        "201":
+          description: "Created"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Invoice added successfully."
+        "500":
+          description: "Internal Server Error"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Failed to add invoice"
+          "400":
+            description: "Bad Request"
+            content:
+              '*/*':
+                schema:
+                  type: "string"
+                examples:
+                  Example#1:
+                    value: "Invalid invoice data format"
+
+
   /partners:
     # Get Partner(s)
+    get:
+      description: "Route to get partner(s)"
+      parameters:
+        - name: type
+          in: "query"
+          description: "Type of partner"
+          required: false
+          schema:
+            type: "string"
+        - name: id
+          in: "query"
+          description: "ID of the partner"
+          required: false
+          schema:
+            type: "string"
+        - name: status
+          in: "query"
+          description: "Status of the partner"
+          required: false
+          schema:
+            type: "string"
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Partner"
+        "404":
+          description: "Not Found"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Partner not found."
+        "500":
+          description: "Internal Server Error"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Failed to get partner"
+
     # Add Partner
     post:
       description: "Route to add a partner"
@@ -68,6 +440,53 @@ paths:
                   Example#1:
                     value: "Invalid input data format."
   # Edit Partner
+  /partners/{id}:
+    put:
+      description: "Route to edit a partner"
+      parameters:
+        - name: id
+          in: "path"
+          description: "ID of the partner to edit"
+          required: true
+          schema:
+            type: "string"
+      requestBody:
+        content:
+          '*/*':
+            schema:
+              $ref: "#/components/schemas/Partner"
+        required: true
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Partner Updated successfully."
+        "400":
+          description: "Bad Request"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Invalid partner input data format."
+                  Example#2:
+                    value: "Missing partner ID."
+        "404":
+          description: "Not Found"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Partner not found."
+
 components:
   schemas:
     Map:
